<resources>
    <string name="app_name">Сounter</string>

    <string name="navigation_drawer_close" translatable="false">Navigation drawer close</string>
    <string name="navigation_drawer_open" translatable="false">Navigation drawer open</string>

    <string-array name="history_sort_items">
        <item>Sort by date</item>
        <item>Sort by value</item>
    </string-array>

    <!-- Counters fragment -->
    <string name="navigationViewToolbar">Groups</string>
    <string name="countersFragmentToolbarTitle">All counters</string>
    <string name="rate">Rate</string>
    <string name="resetSelectionMenu">Reset selected</string>
    <string name="deleteSelectionMenu">Delete selected</string>
    <string name="selectAllSelectionMenu">Select all</string>
    <string name="editSelectionMenu">Edit</string>
    <string name="drawerSettings">Settings</string>
    <string name="there_are_no_active_counters">There are no active counters</string>
    <string name="click_on_the_button_below_to_create">click on the button below to create</string>
    <string name="there_are_no_groups_yet">There are no groups</string>
    <string name="selectionModTitle">Selected: %1$s</string>
    <string name="exportSelected">Export in CSV</string>
    <string name="counterReset">Counter was reset</string>
    <string name="counterResetUndo">UNDO</string>
    <string name="thisIsMaximum">This is maximum</string>
    <string name="thisIsMinimum">This is minimum</string>


    <!-- Counter fragment -->
    <string name="allCountersItem">All counters</string>
    <string name="saveToHistory">Save to history</string>
    <string name="saveToHistoryToast"> saved to counter history</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="counterFragmentEditMenu">Edit</string>
    <string name="counterFragmentDeleteMenu">Delete</string>
    <string name="createEditCounterEditToolbarTitle">Edit</string>
    <string name="foolScreen">Full screen</string>
    <string name="fullscreen_swipe_helper">Use swipes</string>



    <!-- History fragment -->
    <string name="historyFragmentToolbarTitle">History</string>
    <string name="counterHistoryMenuClean">Clear</string>
    <string name="there_no_history_yet">There no history</string>
    <string name="history_swipe_helper">You can remove an item with a swipe</string>
    <string name="clear_history_title">Clear history?</string>
    <string name="clear_history_message">This action cannot be undone</string>
    <string name="clear_history_pos_button">Сlear</string>
    <string name="clear_history_neg_button">Сancel</string>
    <string name="history_item_removed">The item has been removed</string>



    <!-- Add counter dialog -->
    <string name="addCounterDialogTitle">Add counter</string>
    <string name="addCounterDialogCounterTitle">Counter title</string>
    <string name="addCounterDialogCounterGroup">Group</string>
    <string name="addCounterDialogCounterPositiveButton">Create</string>
    <string name="addCounterDialogCounterNegativeButton">Cancel</string>

    <!-- Create edit counter fragment -->
    <string name="createEditCounterCounterTitleHint">Counter tittle</string>
    <string name="createEditCounterCounterTitleText">New сounter</string>
    <string name="createEditCounterCounterValueHint">Value</string>
    <string name="createEditCounterCounterValueText">0</string>
    <string name="createEditCounterCounterStepHint">Step</string>
    <string name="createEditCounterCounterStepText">1</string>
    <string name="createEditCounterCounterMaxValueHint">Max value</string>
    <string name="createEditCounterCounterMinValueHint">Min value</string>
    <string name="titleError">This field can not be empty</string>
    <string name="stepError">This field can not be empty or 0</string>
    <string name="valueError">This field can not be empty</string>


    <!-- Delete counter dialog -->
    <string name="deleteCounterDialogTitle">Delete counter?</string>
    <string name="deleteCounterDialogText">This action cannot be undone</string>
    <string name="deleteCounterDialogPositiveButton">Yes</string>
    <string name="deleteCounterDialogNegativeButton">Cancel</string>
    <string name="deleteCountersDeleteDialog">Delete counters?</string>
    <string name="deleteCounterDeleteDialog">Delete counter?</string>

    <!-- Preference Display -->
    <string name="display_header">Display</string>
    <string name="nightMod">Night mode</string>
    <string name="left_hand_mod">Left hand mod</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="SettingToolbar">Settings</string>
    <string name="lockOrientation">Luck orientation</string>
    <string name="changeAccentColor">Change accent color</string>

    <!-- Preference Feedback -->
    <string name="feedBack_header">Feedback</string>
    <string name="clickSound">Click sound</string>
    <string name="clickVibration">Vibration</string>
    <string name="clickSpeak">Speech output</string>

    <!-- Preference Control -->
    <string name="control_header">Control</string>
    <string name="use_volume_buttons">Use volume buttons</string>
    <string name="fast_count_speed">Speed of fast counting</string>
    <string name="summary_fast_count_speed">Activates by long press on +/- buttons</string>

    <!-- Preference Data -->
    <string name="other_header">Data</string>
    <string name="removeAllCounters">Remove all counters</string>
    <string name="removeAllCountersSummary">This action cannot be undone</string>
    <string name="exportAllCountersInCSV">Export counters</string>
    <string name="exportAllCountersInCSVSummary">Export all counters in CSV format</string>
    <string name="resetAllCounters">Reset all counters</string>
    <string name="countersReset">Counters have been reset</string>
    <string name="backup">Backup</string>
    <string name="backup_instructions">1. Create a backup.\n2. Send the file by mail or in another convenient way.\n3. Restore the backup.</string>
    <string name="backup_instructions_2">* After restoring the backup, the existing counters will be overwritten.
        * If the dialog box does not appear or you see the error "Could not find an application to perform this action", then download the file manager from Google Play.</string>
    <string name="create_backup">Create a backup</string>
    <string name="restore_backup">Restore a backup</string>


    <!-- About counter fragment -->
    <string name="aboutCounter">About counter</string>
    <string name="counterName">Counter name</string>
    <string name="valueBeforeReset">Value before reset</string>
    <string name="value">Value</string>
    <string name="step">Step</string>
    <string name="group">Group</string>
    <string name="minValue">Min</string>
    <string name="maxValue">Max</string>
    <string name="lastReset">Last reset</string>
    <string name="no">No</string>
    <string name="created">Created: %1$s</string>

    <!-- Settings fragment -->
    <string name="successCreatedToast">The backup was successfully saved to %1$s</string>
    <string name="failCreatedToast">Error. %1$s Try saving to a different folder</string>
    <string name="successRestore">The backup was successfully restored. Application will restart</string>
    <string name="failRestore">Invalid file</string>

    <!-- Widget configuration activity -->
    <string name="confWidgetActivityToolbarTitle">Chose counter</string>
    <string name="widget_exists">The widget for this counter already exists</string>
    <string name="widget_deleted">DELETED</string>


    <string name="apply">Apply</string>
    <string name="menu_counter_reset">Reset</string>
    <string name="minValueError">Min value can not be bigger them max</string>
    <string name="maxValueError">max value can not be lees then min</string>
    <string name="ValueBiggerMaxError">Value can not be bigger then max</string>
    <string name="ValueLeesMin">Value can not be less then min</string>
    <string name="remove_ad">Remove ads</string>

</resources>
