<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/display_header">
        <SwitchPreferenceCompat
            app:key="nightMod"
            app:title="@string/nightMod"
            app:singleLineTitle="false"
            app:defaultValue="false"/>

        <Preference
            android:key="changeAccentColor"
            app:title="@string/changeAccentColor"/>

        <SwitchPreferenceCompat
            app:key="keepScreenOn"
            app:title="@string/keep_screen_on"
            app:singleLineTitle="false"
            app:defaultValue="true"/>
        <SwitchPreferenceCompat
            app:key="lockOrientation"
            app:title="@string/lockOrientation"
            app:singleLineTitle="false"
            app:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/feedBack_header">
        <SwitchPreferenceCompat
            app:key="clickSound"
            app:singleLineTitle="false"
            app:title="@string/clickSound"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="clickVibration"
            app:title="@string/clickVibration"
            app:singleLineTitle="false"
            app:defaultValue="false"/>

        <SwitchPreferenceCompat
            app:key="clickSpeak"
            app:singleLineTitle="false"
            app:title="@string/clickSpeak"
            app:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/control_header">

        <SwitchPreferenceCompat
            app:key="useVolumeButtons"
            app:singleLineTitle="false"
            app:title="@string/use_volume_buttons"
            app:defaultValue="true"/>

        <SeekBarPreference
            app:singleLineTitle="false"
            app:key="fastCountSpeed"
            app:summary="@string/summary_fast_count_speed"
            app:defaultValue="200"
            app:min="30"
            android:max="300"
            app:title="@string/fast_count_speed"

            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">
        <Preference
            app:singleLineTitle="false"
            app:key="exportAllCounters"
            app:title="@string/exportAllCountersInCSV"
            app:summary="@string/exportAllCountersInCSVSummary"
            />

        <Preference
            app:singleLineTitle="false"
            app:key="backup"
            app:title="@string/backup"
            />

        <Preference
            app:singleLineTitle="false"
            app:key="resetAllCounters"
            app:title="@string/resetAllCounters" />

    <Preference
        app:singleLineTitle="false"
        app:key="removeAllCounters"
        app:title="@string/removeAllCounters" />

    </PreferenceCategory>

</PreferenceScreen>