<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/foolScreen"
        android:id="@+id/fullScreen"
        android:icon="@drawable/ic_fullscreen"
        app:showAsAction="ifRoom"
        />
    <item android:title="@string/menu_counter_reset"
        android:id="@+id/reset"
        />

    <item android:title="@string/counterFragmentEditMenu"
        android:id="@+id/edit"
        />

    <item android:title="@string/counterFragmentDeleteMenu"
        android:id="@+id/delete"
        />
    <item android:title="@string/historyFragmentToolbarTitle"
        android:id="@+id/history"
        />

    <item android:title="@string/aboutCounter"
        android:id="@+id/about"
        />


</menu>