<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/editSelected"
        android:icon="@drawable/ic_edit"
        android:title="@string/editSelectionMenu"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/selectAllCounter"
        android:title="@string/selectAllSelectionMenu" />

    <item
        android:id="@+id/resetSelected"
        android:icon="@drawable/ic_refresh"
        android:title="@string/resetSelectionMenu"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/exportSelected"
        android:title="@string/exportSelected" />

    <item
        android:id="@+id/deleteSelected"
        android:title="@string/deleteSelectionMenu" />

</menu>