<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_instructions"
        android:textSize="15sp"
        style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCopy"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/create_backup"
        app:layout_constraintEnd_toEndOf="@+id/materialTextView"
        app:layout_constraintStart_toStartOf="@+id/materialTextView"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/restoreCopy"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/restore_backup"
        app:layout_constraintEnd_toEndOf="@+id/createCopy"
        app:layout_constraintStart_toStartOf="@+id/createCopy"
        app:layout_constraintTop_toBottomOf="@+id/createCopy" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backup_instructions_2"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restoreCopy" />

</androidx.constraintlayout.widget.ConstraintLayout>